lang/parser/src/tests/snapshots/flylang_parser__tests__functions__error_function_static_private.snap
---
source: lang/parser/src/tests/functions.rs
expression: code
---
Err(
    UnexpectedToken {
        token: Token {
            value: Private,
            address: <Address `<test>`: 48..55>,
        },
        expected: None,
    },
)
