lang/parser/src/tests/snapshots/flylang_parser__tests__functions__function_private.snap
---
source: lang/parser/src/tests/functions.rs
expression: code
---
Ok(
    [
        Function(
            Function {
                name: Spanned(
                    Identifier(
                        "a",
                    ),
                    14..15,
                ),
                visibility: Local,
                is_static: false,
                arguments: [],
                body: Expr(
                    Spanned(
                        Block(
                            [],
                        ),
                        18..31,
                    ),
                ),
            },
        ),
    ],
)
