lang/parser/src/tests/snapshots/flylang_parser__tests__functions__function_private_static.snap
---
source: lang/parser/src/tests/functions.rs
expression: code
---
Ok(
    [
        Function(
            Function {
                name: Spanned(
                    Identifier(
                        "a",
                    ),
                    21..22,
                ),
                visibility: Local,
                is_static: true,
                arguments: [],
                body: Expr(
                    Spanned(
                        Block(
                            [],
                        ),
                        25..38,
                    ),
                ),
            },
        ),
    ],
)
