lang/parser/src/tests/snapshots/flylang_parser__tests__functions__function_static.snap
---
source: lang/parser/src/tests/functions.rs
expression: code
---
Ok(
    [
        Function(
            Function {
                name: Spanned(
                    Identifier(
                        "a",
                    ),
                    13..14,
                ),
                visibility: Global,
                is_static: true,
                arguments: [],
                body: Expr(
                    Spanned(
                        Block(
                            [],
                        ),
                        17..30,
                    ),
                ),
            },
        ),
    ],
)
