lang/parser/src/tests/snapshots/flylang_parser__tests__functions__function_with_reserved_keyword.snap
---
source: lang/parser/src/tests/functions.rs
expression: code
---
Err(
    ReservedKeywordUsage {
        address: <Address `<test>`: 6..9>,
        keyword: "new",
    },
)
