lang/parser/src/tests/snapshots/flylang_parser__tests__functions__hello_world.snap
---
source: lang/parser/src/tests/functions.rs
expression: code
---
Ok(
    [
        Function(
            Function {
                name: Spanned(
                    Identifier(
                        "main",
                    ),
                    6..10,
                ),
                visibility: Global,
                is_static: false,
                arguments: [],
                body: Expr(
                    Spanned(
                        Block(
                            [
                                Expr(
                                    Spanned(
                                        Call {
                                            callee: Spanned(
                                                Identifier(
                                                    "print",
                                                ),
                                                19..24,
                                            ),
                                            parameters: [
                                                Spanned(
                                                    String(
                                                        "Hello, world!",
                                                    ),
                                                    25..40,
                                                ),
                                            ],
                                        },
                                        25..41,
                                    ),
                                ),
                                Return {
                                    value: Spanned(
                                        Number(
                                            "0",
                                        ),
                                        55..56,
                                    ),
                                },
                            ],
                        ),
                        13..59,
                    ),
                ),
            },
        ),
        Expr(
            Spanned(
                Call {
                    callee: Spanned(
                        Identifier(
                            "main",
                        ),
                        61..65,
                    ),
                    parameters: [],
                },
                66..67,
            ),
        ),
    ],
)
