lang/parser/src/tests/snapshots/flylang_parser__tests__functions__predefined_values_in_function_args.snap
---
source: lang/parser/src/tests/functions.rs
expression: code
---
Ok(
    [
        Function(
            Function {
                name: Spanned(
                    Identifier(
                        "log",
                    ),
                    6..9,
                ),
                visibility: Global,
                is_static: false,
                arguments: [
                    Spanned(
                        Identifier(
                            "x",
                        ),
                        10..11,
                    ),
                    Spanned(
                        Assignment {
                            name: Spanned(
                                Identifier(
                                    "base",
                                ),
                                13..17,
                            ),
                            value: Spanned(
                                Identifier(
                                    "E",
                                ),
                                20..21,
                            ),
                        },
                        13..21,
                    ),
                ],
                body: Expr(
                    Spanned(
                        Block(
                            [],
                        ),
                        23..36,
                    ),
                ),
            },
        ),
    ],
)
